38. Day 3- Multi-Model Integration: Using Gemini, DeepSeek & Grok with OpenAI Agents

--- a/Section 2 Week 2/3_lab3.ipynb
+++ b/Section 2 Week 2/3_lab3.ipynb
@@ -5,15 +5,208 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:22.996128Z",
+     "start_time": "2025-10-06T18:45:20.547081Z"
     }
    },
    "source": [
-    ""
+    "from dotenv import load_dotenv\n",
+    "from openai import AsyncOpenAI\n",
+    "from agents import Agent, Runner, trace, function_tool, OpenAIChatCompletionsModel, input_guardrail, GuardrailFunctionOutput\n",
+    "from typing import Dict\n",
+    "import sendgrid\n",
+    "import os\n",
+    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
+    "from pydantic import BaseModel"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:45.547953Z",
+     "start_time": "2025-10-06T18:45:45.540713Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "load_dotenv(override=True)",
+   "id": "a3d980f9949482ab",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:46.144849Z",
+     "start_time": "2025-10-06T18:45:46.141167Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
+    "groq_api_key = os.getenv('GROQ_API_KEY')"
+   ],
+   "id": "2267d667904813f9",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:46.533458Z",
+     "start_time": "2025-10-06T18:45:46.528372Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"OpenAI API Key not set\")\n",
+    "\n",
+    "if google_api_key:\n",
+    "    print(f\"Google API Key exists and begins {google_api_key[:2]}\")\n",
+    "else:\n",
+    "    print(\"Google API Key not set (and this is optional)\")\n",
+    "\n",
+    "if deepseek_api_key:\n",
+    "    print(f\"DeepSeek API Key exists and begins {deepseek_api_key[:3]}\")\n",
+    "else:\n",
+    "    print(\"DeepSeek API Key not set (and this is optional)\")\n",
+    "\n",
+    "if groq_api_key:\n",
+    "    print(f\"Groq API Key exists and begins {groq_api_key[:4]}\")\n",
+    "else:\n",
+    "    print(\"Groq API Key not set (and this is optional)\")"
+   ],
+   "id": "e608e77b8313be47",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Google API Key exists and begins AI\n",
+      "DeepSeek API Key exists and begins sk-\n",
+      "Groq API Key exists and begins xai-\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:47.211947Z",
+     "start_time": "2025-10-06T18:45:47.208099Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "instructions1 = \"You are a sales agent working for ComplAI, \\\n",
+    "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
+    "You write professional, serious cold emails.\"\n",
+    "\n",
+    "instructions2 = \"You are a humorous, engaging sales agent working for ComplAI, \\\n",
+    "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
+    "You write witty, engaging cold emails that are likely to get a response.\"\n",
+    "\n",
+    "instructions3 = \"You are a busy sales agent working for ComplAI, \\\n",
+    "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
+    "You write concise, to the point cold emails.\""
+   ],
+   "id": "3bb0ab6856a8bb5f",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:23.041182Z",
+     "start_time": "2025-10-06T18:45:23.037179Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    "DEEPSEEK_BASE_URL = \"https://api.deepseek.com/v1\"\n",
+    "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\""
+   ],
+   "id": "2f4aa0c4e3e65b12",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:45:55.705703Z",
+     "start_time": "2025-10-06T18:45:54.269309Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "deepseek_client = AsyncOpenAI(base_url=DEEPSEEK_BASE_URL, api_key=deepseek_api_key)\n",
+    "gemini_client = AsyncOpenAI(base_url=GEMINI_BASE_URL, api_key=google_api_key)\n",
+    "groq_client = AsyncOpenAI(base_url=GROQ_BASE_URL, api_key=groq_api_key)\n",
+    "\n",
+    "deepseek_model = OpenAIChatCompletionsModel(model=\"deepseek-chat\", openai_client=deepseek_client)\n",
+    "gemini_model = OpenAIChatCompletionsModel(model=\"gemini-2.0-flash\", openai_client=gemini_client)\n",
+    "llama3_3_model = OpenAIChatCompletionsModel(model=\"llama-3.3-70b-versatile\", openai_client=groq_client)"
+   ],
+   "id": "b32464d8cdc10817",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:46:26.464146Z",
+     "start_time": "2025-10-06T18:46:26.458636Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sales_agent1 = Agent(name=\"DeepSeek Sales Agent\", instructions=instructions1, model=deepseek_model)\n",
+    "sales_agent2 =  Agent(name=\"Gemini Sales Agent\", instructions=instructions2, model=gemini_model)\n",
+    "sales_agent3  = Agent(name=\"Llama3.3 Sales Agent\",instructions=instructions3,model=llama3_3_model)"
+   ],
+   "id": "a4ce1060c11e7a79",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-06T18:46:33.274314Z",
+     "start_time": "2025-10-06T18:46:33.267937Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "description = \"Write a cold sales email\"\n",
+    "\n",
+    "tool1 = sales_agent1.as_tool(tool_name=\"sales_agent1\", tool_description=description)\n",
+    "tool2 = sales_agent2.as_tool(tool_name=\"sales_agent2\", tool_description=description)\n",
+    "tool3 = sales_agent3.as_tool(tool_name=\"sales_agent3\", tool_description=description)"
+   ],
+   "id": "7fd23e9aae97742a",
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -21,7 +214,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "2267d667904813f9"
+   "id": "746aa2af3774bb67"
   }
  ],
  "metadata": {
