Day 3 - Simplify Integration: Refactored Section 2 Week 2 lab to streamline multi-model setup with Gemini, DeepSeek, Groq, and OpenAI Agents.

--- a/Section 2 Week 2/3_lab3.ipynb
+++ b/Section 2 Week 2/3_lab3.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-06T18:45:22.996128Z",
-     "start_time": "2025-10-06T18:45:20.547081Z"
+     "end_time": "2025-10-07T17:04:25.465532Z",
+     "start_time": "2025-10-07T17:04:22.692109Z"
     }
    },
    "source": [
@@ -26,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T18:45:45.547953Z",
-     "start_time": "2025-10-06T18:45:45.540713Z"
+     "end_time": "2025-10-07T17:04:25.486610Z",
+     "start_time": "2025-10-07T17:04:25.478906Z"
     }
    },
    "cell_type": "code",
@@ -40,18 +40,18 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T18:45:46.144849Z",
-     "start_time": "2025-10-06T18:45:46.141167Z"
+     "end_time": "2025-10-07T17:04:25.552483Z",
+     "start_time": "2025-10-07T17:04:25.548148Z"
     }
    },
    "cell_type": "code",
@@ -63,13 +63,13 @@
    ],
    "id": "2267d667904813f9",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T18:45:46.533458Z",
-     "start_time": "2025-10-06T18:45:46.528372Z"
+     "end_time": "2025-10-07T17:04:25.566993Z",
+     "start_time": "2025-10-07T17:04:25.561758Z"
     }
    },
    "cell_type": "code",
@@ -107,7 +107,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -118,7 +118,7 @@
    },
    "cell_type": "code",
    "source": [
-    "instructions1 = \"You are a sales agent working for ComplAI, \\\n",
+    "-instructions1 = \"You are a sales agent working for ComplAI, \\\n",
     "a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. \\\n",
     "You write professional, serious cold emails.\"\n",
     "\n",
