43. Day 4 - Building an End-to-End Research Pipeline with GPT-4 Agents & Async Tasks

--- a/Section 2 Week 2/4_lab4.ipynb
+++ b/Section 2 Week 2/4_lab4.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-13T18:30:58.120949Z",
-     "start_time": "2025-10-13T18:30:54.996559Z"
+     "end_time": "2025-10-19T18:53:07.734106Z",
+     "start_time": "2025-10-19T18:53:04.813859Z"
     }
    },
    "source": [
@@ -28,8 +28,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-13T18:30:58.147488Z",
-     "start_time": "2025-10-13T18:30:58.135961Z"
+     "end_time": "2025-10-19T18:53:07.760777Z",
+     "start_time": "2025-10-19T18:53:07.751465Z"
     }
    },
    "cell_type": "code",
@@ -52,8 +52,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-13T18:31:33.027948Z",
-     "start_time": "2025-10-13T18:31:33.022825Z"
+     "end_time": "2025-10-19T18:53:07.808205Z",
+     "start_time": "2025-10-19T18:53:07.803061Z"
     }
    },
    "cell_type": "code",
@@ -71,8 +71,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-13T18:32:12.462326Z",
-     "start_time": "2025-10-13T18:32:12.457530Z"
+     "end_time": "2025-10-19T18:53:07.820277Z",
+     "start_time": "2025-10-19T18:53:07.814800Z"
     }
    },
    "cell_type": "code",
@@ -92,8 +92,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-13T18:34:55.777773Z",
-     "start_time": "2025-10-13T18:34:48.519808Z"
+     "end_time": "2025-10-19T18:53:15.571077Z",
+     "start_time": "2025-10-19T18:53:07.826888Z"
     }
    },
    "cell_type": "code",
@@ -112,7 +112,7 @@
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "As of October 2025, several AI agent frameworks have emerged, each offering unique capabilities:\n\n- **Agent Lightning**: A flexible framework enabling reinforcement learning-based training of large language models (LLMs) for any AI agent. It decouples agent execution from training, allowing integration with various agents with minimal code modifications. ([arxiv.org](https://arxiv.org/abs/2508.03680?utm_source=openai))\n\n- **Polymorphic Combinatorial Framework (PCF)**: Utilizes LLMs and mathematical frameworks to design adaptive AI agents for complex environments. PCF enables real-time parameter reconfiguration through combinatorial spaces, supporting scalable and ethical AI applications. ([arxiv.org](https://arxiv.org/abs/2508.01581?utm_source=openai))\n\n- **Cognitive Kernel-Pro**: An open-source, multi-module agent framework democratizing the development of advanced AI agents. It focuses on curating high-quality training data and enhancing agent robustness, achieving state-of-the-art results among open-source agents. ([arxiv.org](https://arxiv.org/abs/2508.00414?utm_source=openai))\n\n- **OpenAI Agents SDK**: A lightweight Python framework released in March 2025, designed for creating multi-agent workflows with comprehensive tracing and guardrails. It is provider-agnostic, compatible with over 100 different LLMs. ([jlcnews.com](https://www.jlcnews.com/post/the-best-ai-agents-in-2025-tools-frameworks-and-platforms-compared?utm_source=openai))\n\n- **Google Agent Development Kit (ADK)**: Announced in April 2025, this modular framework integrates with Google's ecosystem, including Gemini and Vertex AI. It supports hierarchical agent compositions and requires minimal code for efficient development. ([jlcnews.com](https://www.jlcnews.com/post/the-best-ai-agents-in-2025-tools-frameworks-and-platforms-compared?utm_source=openai))\n\n- **Amazon Bedrock AgentCore**: Unveiled in August 2025, this platform simplifies the development and deployment of advanced AI agents. It includes modular services supporting the full production lifecycle, emphasizing flexibility and scalability. ([techradar.com](https://www.techradar.com/pro/aws-looks-to-super-charge-ai-agents-with-amazon-bedrock-agentcore?utm_source=openai))\n\n- **Model Context Protocol (MCP)**: Introduced by Anthropic in November 2024, MCP is an open-source standard for integrating AI systems with external tools and data sources. It has been adopted by major AI providers, including OpenAI and Google DeepMind. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Model_Context_Protocol?utm_source=openai))\n\n- **Kruti**: A multilingual AI agent developed by Ola Krutrim, released in June 2025. It performs real-world tasks by integrating with various online services and supports multiple Indian languages. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Kruti?utm_source=openai))\n\nThese frameworks reflect the rapid advancements in AI agent development, offering diverse tools for creating intelligent, adaptable, and collaborative systems. "
+      "text/markdown": "In 2025, several AI agent frameworks have emerged, each offering unique capabilities:\n\n- **Agentforce 360**: Salesforce's comprehensive platform for building enterprise AI agents, featuring Agentforce Builder for natural language-based agent creation, Agent Script for defining agent behavior, and Agentforce Voice for realistic phone interactions. ([itpro.com](https://www.itpro.com/technology/artificial-intelligence/salesforce-just-launched-a-new-catch-all-platform-to-build-enterprise-ai-agents?utm_source=openai))\n\n- **Agent Lightning**: A flexible framework enabling reinforcement learning-based training of large language models for any AI agent, supporting integration with existing agents with minimal code modifications. ([arxiv.org](https://arxiv.org/abs/2508.03680?utm_source=openai))\n\n- **Cognitive Kernel-Pro**: An open-source, multi-module agent framework designed to democratize the development and evaluation of advanced AI agents, achieving state-of-the-art results among open-source agents. ([arxiv.org](https://arxiv.org/abs/2508.00414?utm_source=openai))\n\n- **AutoAgent**: A fully-automated, zero-code framework that allows users to create and deploy large language model agents through natural language alone, serving as a versatile multi-agent system for general AI assistants. ([arxiv.org](https://arxiv.org/abs/2502.05957?utm_source=openai))\n\n- **Amazon Bedrock AgentCore**: AWS's platform designed to simplify the development and deployment of advanced AI agents, including features like AgentCore Runtime for scalable serverless deployment and AgentCore Memory for context management. ([techradar.com](https://www.techradar.com/pro/aws-looks-to-super-charge-ai-agents-with-amazon-bedrock-agentcore?utm_source=openai))\n\n- **Model Context Protocol (MCP)**: An open standard introduced by Anthropic to standardize the integration and sharing of data between AI systems and external tools, adopted by major AI providers including OpenAI and Google DeepMind. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Model_Context_Protocol?utm_source=openai))\n\n- **Kruti**: A multilingual AI agent developed by Ola Krutrim, designed to perform real-world tasks for users, such as booking taxis and ordering food, by integrating directly with various online services. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Kruti?utm_source=openai))\n\n- **Manus**: An autonomous AI agent developed by Butterfly Effect Technology, capable of independent reasoning, dynamic planning, and autonomous decision-making. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Manus_%28AI_agent%29?utm_source=openai))\n\nThese frameworks reflect the rapid advancements in AI agent development, offering diverse tools and platforms for creating intelligent, autonomous systems. "
      },
      "metadata": {},
      "output_type": "display_data"
@@ -121,12 +121,88 @@
    "execution_count": 5
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-19T18:53:15.714411Z",
+     "start_time": "2025-10-19T18:53:15.709205Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "HOW_MANY_SEARCHES = 3\n",
+    "\n",
+    "INSTRUCTIONS = f\"You are a helpful research assistant. Given a query, come up with a set of web searches \\\n",
+    "to perform to best answer the query. Output {HOW_MANY_SEARCHES} terms to query for.\"\n",
+    "\n",
+    "# Use Pydantic to define the Schema of our response - this is known as \"Structured Outputs\"\n",
+    "# With massive thanks to student Wes C. for discovering and fixing a nasty bug with this!\n",
+    "\n",
+    "class WebSearchItem(BaseModel):\n",
+    "    reason: str = Field(description=\"Your reasoning for why this search is important to the query.\")\n",
+    "\n",
+    "    query: str = Field(description=\"The search term to use for the web search.\")\n",
+    "\n",
+    "\n",
+    "class WebSearchPlan(BaseModel):\n",
+    "    searches: list[WebSearchItem] = Field(description=\"A list of web searches to perform to best answer the query.\")\n",
+    "\n",
+    "\n",
+    "planner_agent = Agent(\n",
+    "    name=\"PlannerAgent\",\n",
+    "    instructions=INSTRUCTIONS,\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    output_type=WebSearchPlan,\n",
+    ")"
+   ],
+   "id": "80e82baff1f46a99",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-19T18:53:18.796515Z",
+     "start_time": "2025-10-19T18:53:15.774644Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "message = \"Latest AI Agent frameworks in 2025\"\n",
+    "\n",
+    "with trace(\"Search\"):\n",
+    "    result = await Runner.run(planner_agent, message)\n",
+    "    print(result.final_output)"
+   ],
+   "id": "f43c3fa7cb8fe798",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To find the latest trends and frameworks for AI agents that are emerging in 2025.', query='latest AI agent frameworks 2025'), WebSearchItem(reason='To get information on specific tools and technologies that are being used for AI agents this year.', query='top AI agent technologies 2025'), WebSearchItem(reason='To learn about advancements in AI agent frameworks and their applications in various industries in 2025.', query='AI agent frameworks applications 2025')]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "80e82baff1f46a99"
+   "source": [
+    "@function_tool\n",
+    "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
+    "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
+    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
+    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
+    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
+    "    content = Content(\"text/html\", html_body)\n",
+    "    mail = Mail(from_email, to_email, subject, content).get()\n",
+    "    response = sg.client.mail.send.post(request_body=mail)\n",
+    "    return {\"status\": \"success\"}"
+   ],
+   "id": "9af9edadb9074679"
   }
  ],
  "metadata": {
